@@ -165,6 +165,8 @@ Version 1.5.1 -- CVS
   - Added sq_setlocale function in order to use multiple locale names.
   - Added size attributes to new_mail sound tags. Fixes #818958.
   - Removed extra ; in SquirrelMail added Received header per RFC 822. Fixes #1088548.
+  - Add IMAP server type "hmailserver" to make search work with hMailServer.
+    Fixes #1085377.
 
 Version 1.5.0
 --------------------
